# forgottenserver

./: .clang-format  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  Dockerfile  ISSUE_TEMPLATE.md  Makefile  README.md  appveyor.yml  build_engine  bw30dp3w.yz1.txt  compile.sh  config.ld  config.lua  config.lua.dist  docker-compose.yaml  docker-compose.yml  docker-run  entrypoint.sh  forgotten.otbm  key.pem  logger.conf  logger.conf.dist  meson.build  meson_options.txt  premake5.lua  run  schema.sql  script_config.lua  sync.sh  vcpkg.json  verify-format.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUG_REPORT.yml  COMPILATION_REPORT.yml  FEATURE_REQUEST.md  FEATURE_REQUEST.yml
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-vcpkg.yml  build-windows.yml  clang-format.yml  codeql.yml  coverity.yml  docker-image.yml  dockerpush.yml  ldoc.yml  lua-check.yml  lua-format-dummy.yml  lua-format.yml  lua-syntax.yml  main.yml  new-build-macos.yml  new-build-ubuntu.yml  new-build-windows.yml  release-vcpkg.yml  release.yml  test.yml  update-vcpkg.yml  xml-syntax.yml
cmake/: ClangTools.cmake  FindAsio.cmake  FindCXX11.cmake  FindClangFormat.cmake  FindCrypto++.cmake  FindGMP.cmake  FindLTO.cmake  FindLua.cmake  FindLuaJIT.cmake  FindMySQL.cmake  FindPostgreSQL.cmake  FindProtobuf.cmake  FindPugiXML.cmake  FindSodium.cmake  FindZLIB.cmake  cotire.cmake  git_watcher.cmake  gitmetadata.h.in
data/: compat.lua  cpplinter.lua  global.lua  stages.lua
docker/: Dockerfile.compile  Dockerfile.server  README.md  data.sql
otfb/: item.fbs  item_types.fbs  map.fbs  misc.fbs
src/: CMakeLists.txt  account.cpp  account.h  actions.cpp  actions.h  admin.cpp  admin.h  auras.cpp  auras.h  ban.cpp  ban.h  base64.cpp  base64.h  baseevents.cpp  baseevents.h  bed.cpp  bed.h  beds.cpp  beds.h  bestiary.cpp  bestiary.h  chat.cpp  chat.h  combat.cpp  combat.h  commands.cpp  commands.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  (+227 more)
src/api_server/: common.h  peer.cpp  peer.h  responder.cpp  responder.h  response_writer.cpp  response_writer.h  router.cpp  router.h  server.cpp  server.h
src/database/: database.cpp  databasemanager.cpp  databasemanager.h  databasetasks.cpp  databasetasks.h
src/encryption/: rsa.cpp
src/ext/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
src/http/: CMakeLists.txt  cacheinfo.cpp  cacheinfo.h  common.h  error.cpp  error.h  fail.cpp  fail.h  generic_stream_acceptor.cpp  generic_stream_acceptor.h  http.cpp  http.h  listener.cpp  listener.h  login.cpp  login.h  peer.cpp  peer.h  responder.cpp  responder.h  router.cpp  router.h  server.cpp  server.h  serverinfo.cpp  serverinfo.h  session.cpp  session.h
src/http/tests/: CMakeLists.txt  test_cacheinfo.cpp  test_login.cpp
src/http_api/: common.h  generic_stream_acceptor.cpp  generic_stream_acceptor.h  peer.cpp  peer.h  responder.cpp  responder.h  router.cpp  router.h  server.cpp  server.h
src/lua/: CMakeLists.txt  api.cpp  api.h  env.cpp  env.h  error.cpp  error.h  meta.cpp  meta.h  modules.cpp  modules.h  register.h  script.cpp  script.h  variant.h
src/lua/modules/: action.cpp  combat.cpp  condition.cpp  configmanager.cpp  container.cpp  creature.cpp  creatureevent.cpp  database.cpp  game.cpp  globalevent.cpp  globals.cpp  group.cpp  guild.cpp  house.cpp  item.cpp  itemtype.cpp  modalwindow.cpp  monster.cpp  monsters.cpp  moveevent.cpp  networkmessage.cpp  npc.cpp  outfit.cpp  party.cpp  player.cpp  podium.cpp  position.cpp  spell.cpp  stdlib.cpp  talkaction.cpp  teleport.cpp  thing.cpp  tile.cpp  variant.cpp  vocation.cpp  weapon.cpp  xml.cpp
src/luamodules/: CMakeLists.txt  actions.cpp  combat.cpp  condition.cpp  configmanager.cpp  container.cpp  creature.cpp  creatureevent.cpp  game.cpp  globalevent.cpp  globals.cpp  groups.cpp  guild.cpp  house.cpp  item.cpp  items.cpp  luamodules.h  luaregister.cpp  luaregister.h  modalwindow.cpp  monster.cpp  monsters.cpp  moveevent.cpp  networkmessage.cpp  npc.cpp  outfit.cpp  party.cpp  player.cpp  podium.cpp  position.cpp  spells.cpp  stdlib.cpp  talkaction.cpp  teleport.cpp  tile.cpp  town.cpp  variant.cpp  vocation.cpp  weapons.cpp  xml.cpp
src/networking/: connection.cpp  connection.h  networkmessage.cpp  networkmessage.h  outputmessage.cpp  outputmessage.h  server.cpp  server.h
src/networking/protocols/: protocol.cpp  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocollogin.h  protocolold.cpp  protocolold.h  protocolstatus.cpp  protocolstatus.h
src/protocols/: protocol.cpp  protocol.h  protocolgame.cpp  protocolgame.h  protocollogin.cpp  protocollogin.h  protocolold.cpp  protocolold.h  protocolstatus.cpp  protocolstatus.h
src/tests/: CMakeLists.txt  test_base64.cpp  test_fileloader.cpp  test_generate_token.cpp  test_matrixarea.cpp  test_networkmessage.cpp  test_quadtree.cpp  test_rsa.cpp  test_scope_exit.cpp  test_sha1.cpp  test_wildcard_tree.cpp  test_xtea.cpp
subprojects/: fmt.wrap  pugixml.wrap
tools/: CMakeLists.txt  raid_xmltolua.cpp
vc11/: settings.props  theforgottenserver.filters  theforgottenserver.vcxproj
vc12/: arch32.props  debug.props  release.props  settings.props  theforgottenserver.filters  theforgottenserver.sln  theforgottenserver.vcxproj
vc14/: arch32.props  arch64.props  debug.props  release.props  settings.props  theforgottenserver.sln  theforgottenserver.vcxproj
vc145/: theforgottenserver.rc  theforgottenserver.slnx  theforgottenserver.vcxproj
vc17/: arch32.props  arch64.props  atlas.rc  atlas.sln  atlas.vcxproj  atlas.vcxproj.filters  debug.props  release.props  settings.props  theforgottenserver.sln  theforgottenserver.vcxproj  theforgottenserver.vcxproj.filters
vc18/: atlas.slnx  atlas.vcxproj  atlas.vcxproj.filters  theforgottenserver.slnx  theforgottenserver.vcxproj  theforgottenserver.vcxproj.filters
(+7136 files in other folders)
